--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="This is my website where I currently have my CV">
+        <meta name="keywords" content="Mikko Lehtinen, Software developer">
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/Grid.css">
          <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
@@ -35,6 +36,7 @@
                     <li><a href="#profile">Profile</a></li>
                     <li><a href="#accomplishments">Accomplishments</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="http://www.mikkolehtinentoday.com/blog/">Blog</a></li>
                 </ul>
                  <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
@@ -168,20 +170,20 @@
          </div>
          <div class="row js--wp-1">
                     <div class="accomplishemts-step">
-                    <div>1</div>
-                        <p>Being part of a team responsible for specifying, developing and testing the GDPR regulations covering over 35 applications to meet the tight deadline of the legislation</p>
+                    <div class ="col span-1-of-4">1</div>
+                        <p  class ="col span-3-of-4">Being part of a team responsible for specifying, developing and testing the GDPR regulations covering over 35 applications to meet the tight deadline of the legislation</p>
                     </div>
                     <div class="accomplishemts-step">
-                    <div>2</div>
-                        <p>Developed a paperless service into the customer’s online banking. Helped to make the service covering 10+ integrations to work and save money in postal services</p>
+                    <div class="col span-1-of-4">2</div>
+                        <p class="col span-3-of-4">Developed a paperless service into the customer’s online banking. Helped to make the service covering 10+ integrations to work and save money in postal services</p>
                     </div>
                     <div class="accomplishemts-step">
-                    <div>3</div>
-                    <p>Developed several offering tools to support sales of new insurance products</p>
+                        <div class="col span-1-of-4">3</div>
+                        <p class="col span-3-of-4">Developed several offering tools to support sales of new insurance products</p>
                     </div>
                     <div class="accomplishemts-step">
-                    <div>4</div>
-                    <p>Successfully developed an application to the customer’s online banking system where customers can apply for their pensions online</p>
+                        <div class="col span-1-of-4">4</div>
+                        <p class="col span-3-of-4">Successfully developed an application to the customer’s online banking system where customers can apply for their pensions online</p>
                     </div>
         </div>
             
@@ -229,7 +231,7 @@
                         </div>
                         <div>                     
                        
-                            <a href="#" class="btn btn-ghost">...todo...</a>
+                            <a href="http://www.mikkolehtinentoday.com/weather/" class="btn btn-ghost">Check it out</a>
                         </div>
                     </div>
                 </div>
@@ -238,7 +240,7 @@
                         <div>
                             <h3>Full stack app</h3>
                             <p class="portfolio-title">React <span>app</span></p>
-                            <p class="portfolio-description">From the excellent course by Stephen Grider</p>
+                            <p class="portfolio-description">My own fullstack app. Planning to use Google App Engine....</p>
                         </div>
                         <div>
                             <ul>
@@ -272,6 +274,7 @@
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
                          <li><a href="#profile">About me</a></li>
+                         <li><a href="http://www.mikkolehtinentoday.com/blog/">Blog</a></li>
 
                     </ul>
                 </div>
